--- a/leirasok.xhtml
+++ b/leirasok.xhtml
@@ -1,11 +1,10 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="hu">
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <meta http-equiv="content-type" content="text/html; charset=UTF-8" /> 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link type="text/css" rel="stylesheet" href="grid.css" />
-    <link type="text/css" rel="stylesheet" href="style.css" />
-    <link id="lnk" type="text/css" rel="stylesheet" href="" />
+    <link id="lnk" type="text/css" rel="stylesheet" href="style.css" />
     <link type="text/css" rel="stylesheet" href="print.css" />
     <script type="text/javascript" src="script.js"></script>
     <title>Beefstro - Videó leírások</title>
