--- a/rolunk.html
+++ b/rolunk.html
@@ -8,8 +8,7 @@
     <script src="script.js"></script> 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link type="text/css" rel="stylesheet" href="grid.css">
-    <link type="text/css" rel="stylesheet" href="style.css">
-    <link id="lnk" type="text/css" rel="stylesheet" href="">
+    <link id="lnk" type="text/css" rel="stylesheet" href="style.css">
     <link type="text/css" rel="stylesheet" href="print.css">
     <script type="text/javascript" src="script.js"></script>
     <title>Beefstro - Rólunk</title>
